1. fixed overflow bug ipad. 2. changed styling of bio and contact pages. 3. changed moving image enligten text

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ a {
 	color: #000;
 }
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	background-color: #fff;
 	overflow-x: hidden;
